[package]
name = "dv-rs"
version = "0.1.0"
authors = ["Pavlo Kerestey <pavlo@kerestey.net>"]

[dependencies]
charming = { version = "0.3.1", features = ["ssr"] }
chrono = { version = "0.4.38", features = ["serde"] }
polars = { version = "0.42.0", features = [
    "performant",
    "csv",
    "lazy",
    "strings",
    "temporal",
] }
